# enfrentando-o-temporal

./: .env.example  .gitignore  README.md  pyproject.toml
bonus/continue_as_new/: README.md  activities.py  run.py  worker.py  workflow.py
bonus/paralelo/: README.md  run.py  worker.py  workflow.py
bonus/paralelo/activities/: device.py
exercicio_01_basico/: README.md  activities.py  run.py  worker.py  workflow.py
exercicio_02_saga/: README.md  run.py  worker.py  workflow.py
exercicio_02_saga/activities/: device.py
exercicio_03_human_loop/: README.md  run.py  telegram_bot.py  worker.py  workflow.py
exercicio_03_human_loop/activities/: device.py  notify.py
exercicio_04_schedules/: README.md  run.py  worker.py  workflow.py
exercicio_04_schedules/activities/: compliance.py
exercicio_05_interface_ops/: README.md  run.py  worker.py  workflow.py
exercicio_05_interface_ops/activities/: device.py  notify.py
infra/: .env  compose.yaml
infra/containerlab/: lab.yml
infra/scripts/: populate_devices.py
scripts/: check_lab.sh  reset_devices.sh  run_exercises.sh  setup_lab.sh  teardown_lab.sh
shared/: device_drivers.py  nornir_helpers.py  telegram_approval_bot.py
